--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "\"This is my basic understanding about react",
   "main": "App.js",
   "scripts": {
+    "start":" parcel index.html",
+    "build":"parcel build index.html", 
     "test": "jest"
   },
   "repository": {
